# z-s-L

./: .gitmodules  CHANGELOG.md  DMSLM.code-workspace  MessageTemplate.json  README.md  __init__.py  audiotest.py  changelog.txt  code_understanding.md  controller.py  hello.txt  ivi_client.py  pyproject.toml  queue_sample.py  requirements.txt  seed.py  server.py  udp.py  update_JSON
cameraRL/: camerarl.puml  main.py
config/: constants.py
helper/: chat.puml  chat.py
llmclass/: llmclass.puml  main.py  test.py
mcpclass/: MCPClient.py  main.py  test_mcp.py
mlmodels/: main.py
parentClass/: main.py  parentclass.puml
pipertts/: main.py  pipertts.puml
tcp/: main.py
udpClient/: main.py
voiceagentpiper/: config.json  test.py
whispermodule/: main.py  whispermodule.puml
