[project]
name = "dmslm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "fastmcp>=2.14.2",
    "mediapipe>=0.10.14",
    "numpy>=2.3.4",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "piper-tts>=1.3.0",
    "requests>=2.32.5",
    "sounddevice>=0.5.3",
    "websockets>=15.0.1",
]
